@@ -1,3 +1,8 @@
+2007-07-11  Tomas Cerha  <cerha@brailcom.org>
+
+	* speechd/client.py (SSIPClient.list_synthesis_voices.split):
+	Convert empty strings to `None'.
+
 2007-07-10  Tomas Cerha  <cerha@brailcom.org>
 
 	* speechd/_test.py (AutomaticTest.test_callbacks): Test also the
